nodeport-gateway/gateway-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller

---
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-gw-nodeport
